# ctl

./: .clang-format  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  compile_flags.txt  ctl.h
broken/: 0_name_starting_with_number.ctl  1_call_generic_thru_trait.ctl  1_call_mythis_thru_trait.ctl  1_call_through_imm.ctl  1_codegen_small_bitints.ctl  1_cond_comp_members.ctl  1_label_break_types.ctl  1_lsp_redef.ctl  1_trait_required_impl.ctl  55_strlit_miscomp.ctl  99_bad_inference.ctl  99_call_through_imm.ctl  99_default_templ_miscomp.ctl  99_deref_never.ctl  99_extern_name_conflict.ctl  99_global_redef.ctl  99_nonsense_use.ctl  99_return_check_broken.ctl  99_should_be_format.ctl  no_trait_inference.ctl  ptr_to_fn_ptr_crash.ctl
bugs/: block_fwd.ctl  block_never.ctl  generics.ctl  inference.ctl  trait_inference.ctl  uninit.ctl  use_errors.ctl
bugs/codegen/: cg_destructure_inner_ptr.ctl
bugs/generics/: inner_fn_generic.ctl  no_check.ctl  type_params.ctl  (+1 more)
ctl/: ctl.h
docs/: OVERVIEW.md
dt/: sanity.ctl
src/: ast.rs  attrs.rs  checked_ast.rs  codegen.rs  compiler.rs  comptime_int.rs  declare.rs  dgraph.rs  error.rs  format.rs  hash.rs  intern.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs  pretty.rs  project.rs  scope.rs  source.rs  sym.rs  test.rs  testlib.rs  typecheck.rs  typeid.rs  utils.rs
std/: any.ctl  bt.ctl  ctl.toml  err.ctl  ffi.ctl  fmt.ctl  hint.ctl  impls.ctl  intrin.ctl  iter.ctl  libc.ctl  main.ctl  mem.ctl  ops.ctl  opt.ctl  panic.ctl  proc.ctl  ptr.ctl  range.ctl  reflect.ctl  runtime.ctl  span.ctl  string.ctl  sync.ctl  test.ctl  time.ctl
tests/: alias.ctl  and_short_circuit.ctl  array_ptr_deref.ctl  boolean.ctl  catch_panic.ctl  closure_scope.ctl  closure_type_params.ctl  encoding.ctl  float_to_str.ctl  fn_trait.ctl  if_expr.ctl  nested_arr.ctl  or_short_circuit.ctl  reassignability.ctl  recursive_def.ctl  statics.ctl  subscript_assignability.ctl  unit_tests.rs  variant_infer.ctl  void_assigns.ctl
tools/: ctlfilt.ctl
unit_tests/: auto_dbg.ctl  bitfields.ctl  ctl.toml  dyn_ptrs.ctl  ext.ctl  guard.ctl  layout.ctl  loops.ctl  misc.ctl  ops.ctl  short_circuit.ctl  statics.ctl  traits.ctl
(+292 files in other folders)
