[package]
name = "ctl"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive"] }
dashmap = "5.5.3"
datatest-stable = "0.2.3"
derive_more = "0.99.17"
either = "1.10.0"
enum-as-inner = "0.6.0"
indexmap = "2.0.0"
num-bigint = "0.4.3"
num-traits = "0.2.16"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["full"] }
tower-lsp = "0.20.0"
unicode-xid = "0.2.4"

[[test]]
name = "test"
path = "src/test.rs"
harness = false
