[package]
name = "ctl"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive"] }
dashmap = "5.5.3"
derive_more = "0.99.17"
either = "1.10.0"
enum-as-inner = "0.6.0"
indexmap = "2.0.0"
lasso = "0.7.3"
num-bigint = "0.4.3"
num-traits = "0.2.16"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.19"
tower-lsp = "0.20.0"
unicode-xid = "0.2.4"
zwohash = "0.1.2"

[dev-dependencies]
datatest-stable = "0.2.3"
tempfile = "3.10.1"
wait-timeout = "0.2.0"

[[test]]
name = "test"
path = "src/test.rs"
harness = false
